# MC-Dyn

./: .gitignore  Dockerfile  README.md  pyproject.toml
mc_dyn/: __init__.py  checkpoint.py  cli.py  config.py  pipeline.py
mc_dyn/stages/: convert.py  detect.py  export.py  extract.py  metadata.py  resample.py  segment.py
ms_dyn/: cli.py  models.py  pipeline.py
ms_dyn/stages/: convert.py  detect.py  export.py  extract.py  metadata.py  segment.py
tests/: conftest.py  test_checkpoint.py  test_detect.py  test_extract.py  test_metadata.py  test_models.py  test_resample.py
viewer/: app.py  requirements.txt
